Introduce DELETE /{p}/paper API
Also, fix a nit, and export `modified_at` in paper export JSON.
